fluvio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fluvio-sc
  namespace: default
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "fluvio.net-chain.xyz"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          namespace: fluvio
          name: fluvio-sc-public
          port: 9003
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
